--- a/index.html
+++ b/index.html
@@ -1,36 +1,83 @@
 <!DOCTYPE html>
 <html lang="hu">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ficzere - Hamarosan</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <div class="split-container">
-        <div class="upper-half">
-            <div class="logo-container">
-                <svg viewBox="0 0 2400 800" xmlns="http://www.w3.org/2000/svg">
-                    <text 
-                        x="1200"
-                        y="620" 
-                        font-family="'Playfair Display'" 
-                        font-size="600" 
-                        fill="#F2ECDC"
-                        font-weight="500" 
-                        text-anchor="middle" 
-                        style="font-stretch: condensed;">ficzere.</text>
-                </svg>
-            </div>
+      <div class="upper-half">
+        <div class="logo-container">
+          <svg viewBox="0 0 2800 800" xmlns="http://www.w3.org/2000/svg">
+            <text
+              x="1200"
+              y="620"
+              font-family="'Playfair Display'"
+              font-size="500"
+              fill="#F2ECDC"
+              font-weight="500"
+              text-anchor="middle"
+              style="font-stretch: condensed"
+            >
+              ficzere
+            </text>
+            <text
+              class="domain-extension"
+              x="1950"
+              y="620"
+              font-family="'Playfair Display'"
+              font-size="500"
+              fill="#F2ECDC"
+              font-weight="500"
+              text-anchor="middle"
+              style="font-stretch: condensed"
+            >
+              .hu
+            </text>
+          </svg>
         </div>
-        <div class="lower-half">
-            <div class="coming-soon">
-                <h1>Hamarosan.</h1>
-            </div>
+      </div>
+      <div class="lower-half">
+        <div class="coming-soon">
+          <h1>Hamarosan.</h1>
         </div>
+      </div>
     </div>
-</body>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const domainExtension = document.querySelector(".domain-extension");
+        let showingHu = false;
+
+        function toggleDomain() {
+          // Add fade effect
+          domainExtension.classList.add("fade-out");
+
+          setTimeout(() => {
+            if (!showingHu) {
+              domainExtension.textContent = ".";
+            } else {
+              domainExtension.textContent = ".hu";
+            }
+            showingHu = !showingHu;
+
+            // Remove fade effect
+            domainExtension.classList.remove("fade-out");
+          }, 250);
+
+          setTimeout(toggleDomain, showingHu ? 250 : 2000);
+        }
+
+        // Start the animation after 2 seconds
+        setTimeout(toggleDomain, 0);
+      });
+    </script>
+  </body>
 </html>
