--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               text-anchor="middle"
               style="font-stretch: condensed"
             >
-              .hu
+              .
             </text>
           </svg>
         </div>
@@ -61,7 +61,7 @@
           domainExtension.classList.add("fade-out");
 
           setTimeout(() => {
-            if (!showingHu) {
+            if (showingHu) {
               domainExtension.textContent = ".";
             } else {
               domainExtension.textContent = ".hu";
@@ -72,11 +72,10 @@
             domainExtension.classList.remove("fade-out");
           }, 250);
 
-          setTimeout(toggleDomain, showingHu ? 250 : 5000);
+          setTimeout(toggleDomain, showingHu ? 3500 : 250);
         }
 
-        // Start the animation after 2 seconds
-        setTimeout(toggleDomain, 0);
+        setTimeout(toggleDomain, 1000);
       });
     </script>
   </body>
